--- a/hei.html
+++ b/hei.html
@@ -6,7 +6,7 @@
     <title>Hello world</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Marcus</h1>
     <p>This is my first not really code, I know how to program, but this is for the course.</p>
 </body>
 </html>
