Changed plain-text in p

--- a/hei.html
+++ b/hei.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Marcus</h1>
-    <p>This is my first not really code, I know how to program, but this is for the course.</p>
+    <p>This is my first not really code, I know how to program, but this is for the course. Just updating for the course, I know how this works.</p>
 </body>
 </html>
